--- a/build.gradle
+++ b/build.gradle
@@ -68,10 +68,11 @@ dependencies {
     testRuntime "org.seleniumhq.selenium:selenium-api:3.6.0"
     // https://mvnrepository.com/artifact/org.webjars/jquery
     compile group: 'org.webjars', name: 'jquery', version: '2.2.1'
-    // https://mvnrepository.com/artifact/org.webjars/bootstrap
     compile group: 'org.webjars', name: 'bootstrap', version: '3.3.6'
-    // https://mvnrepository.com/artifact/org.webjars/font-awesome
     compile group: 'org.webjars', name: 'font-awesome', version: '4.7.0'
+    // https://mvnrepository.com/artifact/org.postgresql/postgresql
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.1.4'
+    compile 'org.grails.plugins:spring-security-core:3.2.1'
 }
 
 bootRun {
